--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<div id="main-info">
 		<div>
-			<H2>Один из лучших гадателей в нашей стране</H2>
+			<H2 style="text-align: center;">Один из лучших гадателей в нашей стране</H2>
 			<H1 class="name"><b>Азазель</b></H2>
 			<H3 style="text-align: center;">Сделает качественный онлайн расклад на картах Таро</H3>
 		</div>
