--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div id="about-artem">Мы часто сталкиваемся с неудачами в жизни. И их приходится принимать, как данность. Но что если неприятности можно избежать? Заглянуть в свое будущее? Узнать ответы на интересующие вас вопросы? К счастью, это можно сделать!<br><br>Азазель — потомственный маг в третьем поколении, который решил продолжить дело своих родителей.<br><br>Азазель посветил большую часть своей жизни, практикуясь в эзотерике и гадании, поэтому мы даем гарантию, что вы получите качественный расклад.<br><br>Расклад происходит быстро, при этом у нас индвивидуальный подход к каждому клиенту. Мы имеем множество положительных отзывов от реальных пользователей.</div>
 	</div>
 
-	<div style="color: white; margin-left: 100px; margin-right: 100px">
+	<div style="color: white;">
 		<H2 style="text-align: center;">Также в нашей команде работают:</H2>
 		<div id="team-grid">
 			<div>
