--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="top-navigation">
 		<a href="index.html">Главная</a>
 		<a href="contact.html">Контакты</a>
-		<a href="order.html">Сделать расклад</a>
+		<a href="order.html">Заказать услугу</a>
 		<a href="reviews.html">Отзывы</a>
 	</div>
 
@@ -21,6 +21,7 @@
 			<H2 style="text-align: center;">Один из лучших гадателей в нашей стране</H2>
 			<H1 class="name"><b>Азазель</b></H2>
 			<H3 style="text-align: center;">Сделает качественный онлайн расклад на картах Таро</H3>
+			<a href="#our-services">Обратиться к галателю</a>
 		</div>
 	</div>
 
@@ -50,15 +51,16 @@
 		<h1>Наши услуги</h1>
 
 		<div id="services-grid">
-			<div style="background: url(img/taro.jpg) #444444; background-blend-mode: multiply; background-size: cover;">
+			<a style="background: url(img/taro.jpg) #444444 center center; background-blend-mode: multiply; background-size: cover;" href="order.html#tarot">
 				<H2>Расклад на картах Таро</H2>
 				<p>Хотите узнать о вашей судьбе? О вашем будущем? Как скоро вы поженитесь или обретёте счастье? Азазель сделает немного четче ваш взгляд на смутную картину под названием "жизнь", разложив карты Таро.</p>
-			</div>
-
-			<div style="background: url(img/natal_chart.jpg) #444444; background-blend-mode: multiply; background-size: cover;">
+				<h1 style="color: #FFD600">от 100 рублей</h1>
+			</a>
+			<a style="background: url(img/natal_chart.jpg) #444444 center center; background-blend-mode: multiply; background-size: cover;" href="order.html#natal-chart">
 				<H2>Натальная карта</H2>
 				<p>Натальная карта — один из лучших источников о вашей судьбе и характере. Азазель построит вашу личную Натальную карту, которая будет описывать многие аспекты вашей жизни.</p>
-			</div>
+				<h1 style="color: #FFD600">150 рублей</h1>
+			</a>
 		</div>
 	</div>
 
