--- a/reviews.html
+++ b/reviews.html
@@ -12,7 +12,7 @@
 	<div class="top-navigation">
 		<a href="index.html">Главная</a>
 		<a href="contact.html">Контакты</a>
-		<a href="order.html">Сделать расклад</a>
+		<a href="order.html">Заказать услугу</a>
 		<a href="reviews.html">Отзывы</a>
 	</div>
 
